# template-haskell

./: .envrc  .gitignore  Makefile  PKGNAME.cabal  README_TEMPLATE.md  cabal.project  flake.nix
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
