cabal-version:   3.6
name:            PKGNAME
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          AUTHNAME
maintainer:      AUTHNAME <EMAIL>
copyright:       CURRENTYEAR AUTHNAME
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/PKGNAME#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/PKGNAME.git

-- Usage: cabal build -fdevelopment
flag development
  description: Disable -Werror during development mode
  default:     False
  manual:      True

common common
  build-depends:      base >=4.9 && <5
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , deriving-aeson
    , directory
    , filepath
    , lens
    , mtl
    , pretty-show
    , prettyprinter
    , text
    , vector

  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -Wredundant-constraints -Widentities -Wpartial-fields
    -fwarn-unused-imports -Wmissing-home-modules

  if !flag(development)
    ghc-options: -Werror

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: Lib

executable PKGNAME-exe
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  PKGNAME
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite PKGNAME-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , PKGNAME
    , QuickCheck
    , tasty
    , tasty-hunit

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark PKGNAME-bench
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , PKGNAME

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
